# protocol-description-language

./: AltOperation.cpp  CMakeCache.txt  CMakeLists.txt  Colors.h  Expression.cpp  Expression.h  Field.cpp  Field.h  Interpreter.cpp  Interpreter.h  LexerTest.h  Makefile  Node.h  Packet.cpp  Packet.h  PacketLexer.cpp  PacketLexer.h  PacketReference.cpp  PacketReference.h  PacketTemplate.cpp  PacketTemplate.h  Parser.cpp  Parser.h  ParserTest.h  Position.h  Protocol.cpp  README.md  Reference.h  RepeatOperation.h  Scanner.cpp  Scanner.h  Sequence.cpp  Sequence.h  SequenceReference.cpp  SequenceReference.h  Source.cpp  Source.h  Token.h  Type.cpp  Type.h  (+9 more)
Analyzer/: AnalyzerField.cpp  AnalyzerField.h  AnalyzerPacket.cpp  AnalyzerPacket.h  PacketsParser.cpp  PacketsParser.h  PacketsScanner.cpp  PacketsScanner.h  ProtocolParserState.h  SequenceParser.cpp  SequenceParser.h
Nodes/: AltOperation.cpp  AltOperation.h  Block.cpp  Block.h  Executable.h  Expression.cpp  Expression.h  Field.cpp  Field.h  Operation.h  Packet.cpp  Packet.h  PacketReference.cpp  PacketReference.h  Protocol.cpp  Protocol.h  Reference.h  RepeatOperation.cpp  RepeatOperation.h  Sequence.cpp  Sequence.h  SequenceReference.cpp  SequenceReference.h  Type.cpp  Type.h
full-test/: generator.py  python  test.sh  test2-gen.py  test2.txt  test3.txt  test4-1.txt  test4-gen.py  test4.txt
packets-parser-test/: test1-gen.py  test1.txt  test2-gen.py  test2.txt
parser-test/: alt-op-test.txt  err1.txt  err2.txt  err3.txt  err5.txt  full-test.txt  iterate-test.txt  packet-test.txt  repeat-test.txt  seq-test-fail.txt
parser-tests/: basic-test.txt  err1.txt  packet-test.txt  seq-test.txt
(+15 files in other folders)
